--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "keystroke.js",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "main": "keystroke.js",
     "repository": {
         "type": "git",
-        "url": "git://github.com/omarestrella/keystroke.js"
+        "url": "git://github.com/dokinoki/keystroke.js"
     },
     "keywords": [
+        "javascript",
         "keyboard",
         "keystroke",
         "keypress",
