--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     ],
     "component": {
         "scripts": {
-            "keystroke": "keystroke.js"
+            "keystroke": "index.js"
         }
     }
 }
