--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
         "scripts": {
             "keystroke": "index.js"
         }
+    },
+    "devDependencies": {
+        "eslint": "^4.6.1",
+        "eslint-config-airbnb-base": "^12.0.0",
+        "eslint-plugin-import": "^2.7.0"
     }
 }
